# RP2040_MAX31855

./: .gitignore  CMakeLists.txt  example.c
Example/: CMakeLists.txt  main.c
src/: MAX31855_2040.c  MAX31855_2040.h
